# summarization-expt-openai

./: .env.sample  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
notebooks/: llm_app.ipynb  llm_main.ipynb  summarizer.py  utils.py
